# static_exception

./: CMakeLists.txt  README.md
.github/workflows/: build_test.yml
include/: exception_memory_pool.hpp  unwind-cxx.h
src/: exception_memory_pool.cpp
test/: CMakeLists.txt  SomeClass.cpp  SomeClass.hpp  SomeOtherClass.cpp  SomeOtherClass.hpp  static_exception_test.cpp
